# devsynapse-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DevSynapse_IA.md  Dockerfile  Makefile  README.md  README_PROFESSIONAL.md  RELEASING.md  SECURITY.md  TAURI.md  backend-entry.py  backend.spec  conftest.py  devsynapse.sh  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_tests.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  (+2 more)
api/: __init__.py  app.py  dependencies.py  models.py  server.py
config/: __init__.py  settings.py
core/: __init__.py  auth.py  bootstrap.py  brain.py  db.py  deepseek.py  llm_optimization.py  memory.py  migrations.py  monitoring.py  opencode_bridge.py  plugin_system.py  runtime_config.py  skills.py
docs/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.updater.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/scripts/: linux-preremove.sh
frontend/src-tauri/src/: lib.rs  main.rs
legacy/: README.md  dashboard.html  opencode_bridge_backup.py  poc_devsynapse.py
scripts/: build-backend.sh  dev.py  ensure_runtime_config.py  generate-tauri-update-manifest.py  install.sh  manage_users.py  migrate.py  ui_smoke.sh  uninstall.sh  update.sh  update_locks.sh
tests/: conftest.py
(+76 files in other folders)
